feature: 글쓰기 페이지 까지 redirect

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,7 +43,7 @@
     // 동적으로 폼을 생성하여 POST 요청을 보냄
     const form = document.createElement('form');
     form.method = 'GET';
-    form.action = '/write';
+    form.action = '/writePage';
 
     document.body.appendChild(form);
     form.submit();
