--- a/src/main/resources/static/article/index.html
+++ b/src/main/resources/static/article/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <a href="/main"><img src="../img/signiture.svg" /></a>
+        <a href="/index.html"><img src="../img/signiture.svg" /></a>
         <ul class="header__menu">
           <li class="header__menu__item">
             <a class="btn btn_contained btn_size_s" href="/article">글쓰기</a>
@@ -23,13 +23,23 @@
       </header>
       <div class="page">
         <h2 class="page-title">게시글 작성</h2>
-        <form class="form">
+        <form class="form" id="article-write-form" action="/write" method="POST" >
+          <div class="textfield textfield_size_s">
+            <input
+                type="text"
+                class="input_textfield"
+                placeholder="글의 제목을 입력하세요"
+                autocomplete="off"
+                name="title"
+            />
+          </div>
           <div class="textfield textfield_size_m">
             <p class="title_textfield">내용</p>
             <textarea
               class="input_textfield"
               placeholder="글의 내용을 입력하세요"
               autocomplete="username"
+              name="content"
             ></textarea>
           </div>
           <button
@@ -44,4 +54,11 @@
       </div>
     </div>
   </body>
+  <script>
+    document.getElementById('article-write-form').addEventListener('submit', function(event) {
+      event.preventDefault();
+      this.action = '/write';
+      this.submit();
+    });
+  </script>
 </html>
