feature: 글쓰기 기능 구현 완료

--- a/src/main/resources/static/article/index.html
+++ b/src/main/resources/static/article/index.html
@@ -46,7 +46,7 @@
             id="registration-btn"
             class="btn btn_contained btn_size_m"
             style="margin-top: 24px"
-            type="button"
+            type="submit"
           >
             작성 완료
           </button>
