--- a/src/main/resources/static/article/index.html
+++ b/src/main/resources/static/article/index.html
@@ -23,31 +23,19 @@
       </header>
       <div class="page">
         <h2 class="page-title">게시글 작성</h2>
-        <form class="form" id="article-write-form" action="/write" method="POST" >
+        <form class="form" id="article-write-form" action="/write" method="POST" enctype="multipart/form-data">
           <div class="textfield textfield_size_s">
-            <input
-                type="text"
-                class="input_textfield"
-                placeholder="글의 제목을 입력하세요"
-                autocomplete="off"
-                name="title"
-            />
+            <input type="text" class="input_textfield" placeholder="글의 제목을 입력하세요" autocomplete="off" name="title" />
           </div>
           <div class="textfield textfield_size_m">
             <p class="title_textfield">내용</p>
-            <textarea
-              class="input_textfield"
-              placeholder="글의 내용을 입력하세요"
-              autocomplete="username"
-              name="content"
-            ></textarea>
+            <textarea class="input_textfield" placeholder="글의 내용을 입력하세요" autocomplete="username" name="content"></textarea>
           </div>
-          <button
-            id="registration-btn"
-            class="btn btn_contained btn_size_m"
-            style="margin-top: 24px"
-            type="submit"
-          >
+          <!-- Add file input for photo upload -->
+          <div>
+            <input type="file" name="photo" accept="image/*">
+          </div>
+          <button id="registration-btn" class="btn btn_contained btn_size_m" style="margin-top: 24px" type="submit">
             작성 완료
           </button>
         </form>
